8241997: Scalar replacement of cloned array is broken after JDK-8238759

Replacement code still expected ArrayCopyNode::Dest to be an AddPNode.

Reviewed-by: roland, neliasso